--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Application API</title>
+    <title>Movie Bee Application API</title>
 </head>
 
 <body>
-    <h3>Movie API Index Page</h3>
+    <h3>Movie Bee API Index Page</h3>
 </body>
 
 </html>
